@@ -1,3 +1,5 @@
+22.jan (la)
+      - add ability to choose MIDI input interface
 19.jan (ws)
       - fix crashes with note pitches of 127
 17.jan (ws)
